# rservr

./: COPYING  Makefile.am  Makefile.in  README  attributes.h  configure  configure.ac  index.html  param.h  project-stats.sh  resourcerver.doxyfile  todo  uncomment.c  verify-filter
app/: app-developer-guide.html  basic.html  client-administration.html  command-plugin.html  command-queue.html  command.html  detached.html  message-queue.html  monitor.html  plugin-table.html  services.html
command/: command-developer-guide.html
extensions/: Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in
lang/: Makefile.am  Makefile.in  translation.h
lang/us-english/: Makefile.am  Makefile.in  client.c  command-info.c  command.c  general.c  proto.c  protocol.c  server.c
libs/: Makefile.am  Makefile.in
libs/client/: Makefile.am  Makefile.in  api-admin-client.cpp  api-client-timing.cpp  api-client.cpp  api-command-queue.cpp  api-control-client.cpp  api-load-plugin.cpp  api-message-queue.cpp  api-monitor-client.cpp  api-remote-service.cpp  api-request.cpp  api-resource-client.cpp  api-response.cpp  api-service-client.cpp  client-command.cpp  client-input.cpp  client-output.cpp  command-queue.cpp  default-client-timing.c
libs/client/local-include/: api-admin-client.hpp  api-client-timing.hpp  api-client.hpp  api-command-queue.hpp  api-control-client.hpp  api-load-plugin.hpp  api-message-queue.hpp  api-monitor-client.hpp  api-remote-service.hpp  api-request.hpp  api-resource-client.hpp  api-response.hpp  api-service-client.hpp  client-command.hpp  client-input.hpp  client-output.hpp  client-response-macro.hpp  command-macro.hpp  command-queue.hpp
libs/command/: Makefile.am  Makefile.in  api-command.cpp  api-external-command.cpp  api-label-check.cpp  command-generator.cpp  command-transmit.cpp
libs/filter/: Makefile.am  Makefile.in  api-filter.c  api-filter.h  filter-main.c
libs/proto/: Makefile.am  Makefile.in
libs/proto/local-include/: api-source-macro.hpp
libs/proto/proto-admin/: Makefile.am  Makefile.in  proto-admin-client.cpp
libs/proto/proto-common/: Makefile.am  Makefile.in  proto-common.cpp
libs/proto/proto-control/: Makefile.am  Makefile.in  proto-control-client.cpp
libs/proto/proto-monitor/: Makefile.am  Makefile.in  proto-monitor-client.cpp
libs/proto/proto-resource/: Makefile.am  Makefile.in  proto-resource-client.cpp
libs/proto/proto-server/: Makefile.am  Makefile.in  proto-server.cpp
libs/proto/proto-service/: Makefile.am  Makefile.in  proto-service-client.cpp
libs/protocol/: Makefile.am  Makefile.in  api-command.cpp  api-config-parser.cpp  api-label-check.cpp  api-open-file.cpp  api-protocol-file.cpp  api-timing.cpp  api-tools.cpp  command-generator.cpp  common-input.cpp  common-output.cpp  constants.cpp  conversion.cpp  cstring-input.cpp  label-output.cpp  timing-manager.c  timing-query.cpp
libs/protocol/config/working/: build-parser.sh  config-context.cpp  config-context.h  config-context.hpp  config-lexer.l  config-parser.y
libs/protocol/ipc/: api-external-command.cpp  build-parser.sh  command-transmit.cpp  common-input.cpp  common-output.cpp  cstring-input.cpp  ipc-lexer.c  ipc-lexer.l  ipc-parser.tab.cpp  ipc-parser.y
libs/protocol/ipc/working/: Makefile  build.sh  command-base.hpp  defs.h  element-interface.hpp  external-command.hpp  lexer.l  parser.y  sections.hpp  test-command.hpp  test-file.sh  test2.txt  test3.txt
libs/protocol/local-include/: label-output.hpp
libs/server/: Makefile.am  Makefile.in  api-server.cpp  client-list.cpp  client-thread.cpp  default-server-timing.c  execute-module.cpp  execute-thread.cpp  local-client.cpp  monitor-list.cpp  monitors.cpp  name-check.cpp  server-command.cpp  server-load.c  server-signal.cpp  server-timing.cpp  service-list.cpp
libs/server/local-include/: api-server-interface.hpp  api-server.hpp  client-list.hpp  client-thread.hpp  execute-module.hpp  execute-queue.hpp  execute-thread.hpp  local-client.hpp  monitor-list.hpp  monitor-update.hpp  monitors.h  name-check.hpp  priority-adjust.hpp  protected-server.hpp  server-command.hpp  server-load.h  server-parameters.h  server-signal.h  server-timing.hpp  service-list.hpp
plugins/: Makefile.am  Makefile.in
plugins/dataref/: Makefile.am  Makefile.in  api-dataref-thread.cpp  api-dataref.cpp  api-dataref.h  plugin-dataref.cpp  plugin-dataref.hpp
plugins/netcntl/: Makefile.am  Makefile.in  api-netcntl.cpp  api-netcntl.h  plugin-netcntl.cpp  plugin-netcntl.hpp
plugins/ready/: Makefile.am  Makefile.in  api-ready.cpp  api-ready.h  plugin-ready.cpp  plugin-ready.hpp
plugins/rqconfig/: Makefile.am  Makefile.in  api-rqconfig.cpp  api-rqconfig.h  plugin-rqconfig.cpp  plugin-rqconfig.hpp
plugins/rqsrvc/: Makefile.am  Makefile.in  api-rqsrvc.cpp  api-rqsrvc.h  plugin-rqsrvc.cpp  plugin-rqsrvc.hpp  rqsrvc-auto.cpp
plugins/rsvp-dataref/: Makefile.am  Makefile.in  api-dataref-thread.cpp  api-dataref.cpp  api-dataref.h  plugin-dataref.cpp  plugin-dataref.hpp
plugins/rsvp-netcntl/: Makefile.am  Makefile.in  api-netcntl.cpp  api-netcntl.h  plugin-netcntl.cpp  plugin-netcntl.hpp
plugins/rsvp-passthru/: Makefile.am  Makefile.in  api-passthru-thread.cpp  api-passthru.cpp  api-passthru.h  passthru-assist.cpp  passthru-auto.cpp  plugin-passthru.cpp  plugin-passthru.hpp
plugins/rsvp-ready/: Makefile.am  Makefile.in  api-ready.cpp  api-ready.h  plugin-ready.cpp  plugin-ready.hpp
plugins/rsvp-rqconfig/: Makefile.am  Makefile.in  api-rqconfig-thread.cpp  api-rqconfig.cpp  api-rqconfig.h  plugin-rqconfig.cpp  plugin-rqconfig.hpp
plugins/rsvp-trigger/: Makefile.am  Makefile.in  api-trigger.cpp  api-trigger.h  plugin-trigger.cpp  plugin-trigger.hpp
programs/: Makefile.am  Makefile.in
protocols/: Makefile.am  (+4 more)
security/rsvx-dnsregex/: Makefile.am  Makefile.in  rsvx-dnsregex.cpp
security/rsvx-inert/: Makefile.am  Makefile.in  rsvx-inert.c
security/rsvx-penalty/: Makefile.am  Makefile.in  rsvx-penalty.cpp
security/rsvx-testing/: Makefile.am  Makefile.in  rsvx-testing.cpp
security/rsvx-tls/: Makefile.am  Makefile.in  rsvx-tls.cpp
(+647 files in other folders)
