SUBDIRS=proto-server proto-common proto-admin proto-service proto-control proto-resource proto-monitor
EXTRA_DIST=../include/proto/server-response.hpp ../include/proto/client-response.hpp ../include/proto/api-header-macro.hpp ../include/proto/load-macro.hpp ../include/proto/response-macro.hpp local-include/api-source-macro.hpp
